--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+h1 {
+    display: flex;
+    justify-content: center;
+    margin: 4vh 0;
+}
+footer {
+    display: flex;
+    justify-content: center;
+    margin: 5vh 0;
+}
+
 
 #feedback-template {
     display: flex;
